add basic template.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,47 @@
     <link rel="stylesheet" href="style.css" />
     <title>Star Wars Text</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="scroll-text">
+        <h1>STAR WARS</h1>
+        <h2>Scrolling Text Effect</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum,
+          ad, vero veritatis animi impedit minus, deleniti cupiditate alias
+          eaque harum aspernatur iste ducimus quas exercitationem magnam vel
+          beatae sint quos iusto adipisci soluta quis asperiores. Iusto
+          voluptatum atque odio repellendus.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum,
+          ad, vero veritatis animi impedit minus, deleniti cupiditate alias
+          eaque harum aspernatur iste ducimus quas exercitationem magnam vel
+          beatae sint quos iusto adipisci soluta quis asperiores. Iusto
+          voluptatum atque odio repellendus.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum,
+          ad, vero veritatis animi impedit minus, deleniti cupiditate alias
+          eaque harum aspernatur iste ducimus quas exercitationem magnam vel
+          beatae sint quos iusto adipisci soluta quis asperiores. Iusto
+          voluptatum atque odio repellendus.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum,
+          ad, vero veritatis animi impedit minus, deleniti cupiditate alias
+          eaque harum aspernatur iste ducimus quas exercitationem magnam vel
+          beatae sint quos iusto adipisci soluta quis asperiores. Iusto
+          voluptatum atque odio repellendus.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum,
+          ad, vero veritatis animi impedit minus, deleniti cupiditate alias
+          eaque harum aspernatur iste ducimus quas exercitationem magnam vel
+          beatae sint quos iusto adipisci soluta quis asperiores. Iusto
+          voluptatum atque odio repellendus.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
